# Rhyming

./: .gitignore  README.md
backend/: docker-compose.yaml  pyproject.toml
backend/api/: main.py
backend/api/routers/: rhyme.py
backend/api/schemas/: rhyme.py
